java: fix remainder of error-prone issues
- Suppress a few false positives where we are doing something sketchy
  but know it to be OK

- Fix two cases where a class member shadowed a member of a superclass

- Avoid StringBuffer in timestampToString. StringBuffer is synchronized,
  so it is probably more efficient to use plain String concatenation
  instead.[1]

- Avoid reference-equality checks in Status.fromMasterErrorPB and
  Status.fromTabletServerErrorPB. Based on the call sites I believe
  these checks would never have fired, because we only call these
  methods in cases where we know there to have been an actual error.

- Fix construction of the Flume KuduOperationProducer implementation to
  properly throw exceptions by using
  clazz.getDeclaredConstructor().newInstance() instead of
  clazz.newInstance()[2]

[1] https://github.com/google/error-prone/blob/master/docs/bugpattern/JdkObsolete.md
[2] https://github.com/google/error-prone/blob/master/docs/bugpattern/ClassNewInstance.md

Change-Id: I54f67c9718e1022d7996ab1cb827f68c1beb5d3d
Reviewed-on: http://gerrit.cloudera.org:8080/10202
Reviewed-by: Grant Henke <granthenke@apache.org>
Tested-by: Todd Lipcon <todd@apache.org>